# TrackerApp

./: .gitignore  README.md
TrackerApp/: CMakeLists.txt  Main.qml  imageprovider.cpp  imageprovider.h  main.cpp  model.cpp  model.h
